2008-09-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use netrc for HTTP.
	Now FTP user/password is sent in Authorization header when
	--ftp-via-http-proxy=get is given.
	* src/AuthConfigFactory.cc
	* src/HttpRequest.cc
	* src/HttpRequest.h
	* src/NetrcAuthResolver.cc
	* src/NetrcAuthResolver.h
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/prefs.cc
	* src/prefs.h
	* test/AuthConfigFactoryTest.cc
	* test/HttpRequestTest.cc
	* test/NetrcAuthResolverTest.cc

2008-09-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Issue PWD command first and get working directory and use it as a prefix
	for CWD command.
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/FtpConnection.cc
	* src/FtpConnection.h
	* src/FtpFinishDownloadCommand.cc
	* src/FtpInitiateConnectionCommand.cc
	* src/FtpNegotiationCommand.cc
	* src/FtpNegotiationCommand.h
	* test/FtpConnectionTest.cc

2008-09-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed default user/pass for FTP user/pass, since it should not have
	precedence over netrc configuration by default.
	* src/OptionHandlerFactory.cc

2008-09-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added debug log for socket event.
	* src/AbstractCommand.cc
	* src/PeerAbstractCommand.cc
	
2008-09-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Log microseconds.
	* src/SimpleLogger.cc (SimpleLogger::writeLog)

2008-09-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Replaced HelpItem.cc with OptionHandler.cc.
	* po/POTFILES.in
	
	Updated po files with 'make update-po'
	* po/aria2c.pot
	* po/*.po

2008-09-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed possible values from the text.
	* src/usage_text.h (TEXT_METALINK_PREFERRED_PROTOCOL)

2008-09-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed unused preferences:
	PREF_NO_PREALLOCATION
	PREF_STDOUT_LOG
	PREF_TRACKER_MAX_TRIES
	PREF_DIRECT_DOWNLOAD_TIMEOUT
	PREF_MIN_SEGMENT_SIZE