@@ -1,5 +1,16 @@
 2008-09-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Now colon is required for username and password in FTP URL, like:
+	ftp://username:password@host.
+	If colon is not there, aria2 don't parse it as a username. For example,
+	aria2 don't retrieve username from ftp://username@host.
+	This fix was made in order to login FTP server via non-transparent ftp
+	proxy.
+	* src/Request.cc
+	* test/RequestTest.cc
+
+2008-09-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Use netrc for HTTP.
 	Now FTP user/password is sent in Authorization header when
 	--ftp-via-http-proxy=get is given.
